@@ -1,0 +1,10 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2020-07-02T16:30:03Z"
+ content="""
+Yeah, this adjustGitRepo that re-runs the code repeatedly sometimes is very
+hard to understand and I guess needs to be redone entirely somehow.
+
+I've reverted the commit, reopened the old bug which I prefer to this one.
+"""]]
